# quick-links-rofi

./: Cargo.toml  README.md
src/: cli.rs  config.rs  input.rs  lib.rs  link.rs  main.rs
