[package]
name = "quick-links-rofi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.5.0"
clap_derive = "4.5.0"
home = "0.5.9"
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde_yaml = "0.9.31"
